[tool.poetry]
name = "pyweek-32"
version = "0.1.0"
description = "Cat devs entry for pyweek"
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
