[tool.poetry]
name = "pyweek-32"
version = "0.1.0"
description = "Cat devs entry for pyweek"
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.8.2"
isort = "^5.9.3"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "poetry run python -m pyweek"
lint = "poetry run flake8"
format = "poetry run black . && poetry run isort ."
pre-commit = "poetry run pre-commit install"
