[tool.poetry]
name = "pyweek-32"
version = "0.1.0"
description = "Cat devs entry for pyweek 32"
authors = ["Cat Developer Group"]

[tool.poetry.dependencies]
arcade = "^2.6.2"
python = "^3.9"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"
taskipy = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "poetry run python -m src"
lint = "poetry run flake8"
format = "poetry run black . && poetry run isort ."
pre-commit = "poetry run pre-commit install"
